--- a/src/iotDataStation/IotDataStation/WebTemplates/PageLinks.cshtml
+++ b/src/iotDataStation/IotDataStation/WebTemplates/PageLinks.cshtml
@@ -1,7 +1,11 @@
 ﻿@using System;
 @using System.Collections.Generic;
 @using System.Linq;
-@using IotDataServer.Common.DataModel;
+@using IotDataStation.Common.Interface;
+@using IotDataStation.Common.DataModel;
+@using IotDataStation.Interface;
+@using IotDataStation.DataModel;
+@using IotDataStation;
 @using RazorEngine.Templating
 @{
     ViewBag.Title = "TestLinks";
